--- a/vendas.html
+++ b/vendas.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Pagina de Vendas</h1>
     <a href="index.html">Voltar para a pagina inicial</a>
+    <p>PlayStation 5 = R$5000.00</p>
 </body>
 </html>
