Top 3 Jogos favoritos

--- a/blog.html
+++ b/blog.html
@@ -11,5 +11,10 @@
     <h2>Post numero 1</h2>
     <a href="index.html">Voltar para a pagina inicial</a>
     <p>PlayStation 5 = R$5000.00</p>
+    <ul>
+        <li>Call of Duty</li>
+        <li>Mortal Kombat</li>
+        <li>Resident Evil</li>
+    </ul>
 </body>
 </html>
